--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags",
-    "DB:init": "npx ts-node database.ts",
-    "DB:seeder": "npx ts-node seeder.ts"
+    "DB:init": "npx ts-node ./src/database/database.ts",
+    "DB:seeder": "npx ts-node ./src/seeder/seeder.ts",
+    "run:test": "npx ts-node ./src/test_decoder.ts"
   },
   "files": [
     "lib/**/*"
