--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "homepage": "https://gitlab.com/portamento/cwr-lib#readme",
   "devDependencies": {
     "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.19",
     "jest": "^29.3.1",
     "prettier": "^2.8.2",
     "ts-jest": "^29.0.3",
