--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "cwr-lib-sony",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Library for encode & decode CWR",
-  "main": "index.ts",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "jest --config --passWithNoTests jestconfig.json",
