--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "cwr-lib-sony",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Library for encode & decode CWR",
-  "main": "index.js",
-  "type": "module",
+  "main": "lib/index",
+  "typings": "lib/index",
   "scripts": {
     "test": "jest --config --passWithNoTests jestconfig.json",
     "build": "tsc",
