--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "cwr-lib-sony",
-  "version": "1.1.14",
+  "version": "1.2.1",
   "description": "Library for encode & decode CWR",
   "main": "lib/index",
   "typings": "lib/index",
   "scripts": {
     "test": "jest --config --passWithNoTests jestconfig.json",
     "build": "tsc",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
